# Floppy-Bird

./: CMakeLists.txt  LICENSE  LICENSE font.txt
cmake/: FindSDL2.cmake
headers/: draw.h  engine.h  entities.h  event.h  game.h  message.h  settings.h  settingsValues.h
src/: draw.c  engine.c  event.c  game.c  main.c  message.c
